# K8s-simulator

./: Cargo.toml  readme.md
src/: api_server.rs  cluster_autoscaler.rs  cluster_autoscaler_algorithm.rs  dataset_reader.rs  deployment.rs  events.rs  experiment.rs  experiment_config.rs  histogram.rs  horizontal_autoscaler.rs  horizontal_autoscaler_algorithm.rs  lib.rs  load_model.rs  logger.rs  main.rs  metrics_server.rs  node.rs  pod.rs  scheduler.rs  scheduler_algorithm.rs  simulation.rs  simulation_config.rs  simulation_metrics.rs  vertical_autoscaler.rs  vertical_autoscaler_algorithm.rs
src/default_cluster_autoscaler_algorithms/: default_simple_algorithm.rs  mod.rs
src/default_horizontal_autoscaler_algorithms/: default_horizontal_algorithm.rs  mod.rs
src/default_scheduler_algorithms/: lrp_algorithm.rs  mod.rs  mrp_algorithm.rs
src/default_vertical_autoscaler_algorithms/: default_auto_algorithm.rs  mod.rs
src/extensions/: alibaba_dataset_converter.py  google_dataset_converter.py
test-configs/: config.yaml
tests/: test_simulation.rs
