[package]
name = "K8s-simulator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab.git" }
rand = "0.8.5"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.29"
serde_json = "1.0.108"
cast = "0.3.0"