[package]
name = "K8s-simulator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab.git" }
order-stat = "0.1"
rand = "0.8.5"
log = "0.4.20"
sugars = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.4.4"
serde_yaml = "0.9.29"
serde_json = "1.0.108"
cast = "0.3.0"
dyn-clone = "1.0.16"